fondo completos en todos

--- a/Temas_acustica/Historia_acustica.html
+++ b/Temas_acustica/Historia_acustica.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -63,3 +64,4 @@
                 <p>Kinsler, L. E., Frey, A. R., Coppens, A. B., & Sanders, J. V. (2012). Fundamentals of acoustics: An
                     introduction to physics and engineering principles (5th ed.).</p>
             </p>
+            <script src="/assets/js/estrellas.js"></script>
