--- a/Temas_acustica/Movimiento_armonico_simple.html
+++ b/Temas_acustica/Movimiento_armonico_simple.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -79,9 +80,9 @@
             <p>En resumen, el Movimiento Armónico Simple es un concepto fundamental en la física que describe oscilaciones
                 periódicas en sistemas físicos, con una ecuación característica y aplicaciones prácticas en diversos campos
                 de la ciencia y la ingeniería.</p>
-                <p>Marino, L., Giorgi, S., Cámara, C., & Carreri, R. (2015). Controversias en el tratamiento del movimiento
-                    oscilatorio armónico simple en libros de Física del nivel básico universitario. Revista de Enseñanza de la
-                    Física
-                    Universidad del País Vasco. (n.d.). Movimiento armónico simple y oscilador amortiguado. Retrieved from
-                    https://www.ehu.eus/acustica/espanol/basico/mases/mases.html</p>
+            <p>Marino, L., Giorgi, S., Cámara, C., & Carreri, R. (2015). Controversias en el tratamiento del movimiento
+            oscilatorio armónico simple en libros de Física del nivel básico universitario. Revista de Enseñanza de la Física
+            Universidad del País Vasco. (n.d.). Movimiento armónico simple y oscilador amortiguado. Retrieved from
+            https://www.ehu.eus/acustica/espanol/basico/mases/mases.html</p>
             </p>
+            <script src="/assets/js/estrellas.js"></script>
