--- a/Temas_acustica/Movimiento_ondulatorio.html
+++ b/Temas_acustica/Movimiento_ondulatorio.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -117,3 +118,4 @@
                     Serway, R. A., & Jewett, J. W. (2018). Physics for scientists and engineers (10th ed.). Cengage Learning.
                 </p>
             </p>
+            <script src="/assets/js/estrellas.js"></script>
