--- a/Temas_acustica/Potencia.html
+++ b/Temas_acustica/Potencia.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
-</head>
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 
 <body>
     <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
@@ -58,3 +58,4 @@
                 están en fase, y el poder promedio es igual al producto de los valores eficaces del voltaje y la corriente.
             </p>      <p>The Physics Classroom. (n.d.). Electromagnetic Waves. Retrieved from
                 https://www.physicsclassroom.com/class/waves/Lesson-4/Electromagnetic-Waves</p></p>
+                <script src="/assets/js/estrellas.js"></script>
