--- a/Temas_fisica_moderna/El_gato_de_Schrodinger.html
+++ b/Temas_fisica_moderna/El_gato_de_Schrodinger.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -65,3 +66,4 @@
                 <p>El gato de Schrödinger - Historias de la ciencia - ACTA. (s/f). Acta.es. Recuperado el 15
                     de abril de 2024, de https://www.acta.es/recursos/baul-de-ciencias-y
                     tecnologia/historias-de-la-ciencia/1-el-gato-de-schroedinger</p>
+                    <script src="/assets/js/estrellas.js"></script>
