--- a/Temas_fisica_moderna/Introduccion_a_la_fisica.html
+++ b/Temas_fisica_moderna/Introduccion_a_la_fisica.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -72,3 +73,4 @@
                 Investigación y Análisis. La conversación . Recuperado el 15 de abril de 2024, de
                 https://theconversation.com/es/topics/fisica-cuantica-68767</p>
         </p>
+        <script src="/assets/js/estrellas.js"></script>
