--- a/Temas_fisica_moderna/Teoria_de_la_relatividad.html
+++ b/Temas_fisica_moderna/Teoria_de_la_relatividad.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -63,3 +64,4 @@
                     National Geographic. (2017, mayo 29). Genius: El ascensor de Einstein. La aceleración
                     y la gravedad son la misma cosa. National Geographic.</p>
             </p>
+            <script src="/assets/js/estrellas.js"></script>
