--- a/Temas_optica/Ampliacion_de_la_imagen.html
+++ b/Temas_optica/Ampliacion_de_la_imagen.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -41,3 +42,4 @@
             </div>
         </div>
         <p class="text-break"> </p>
+        <script src="/assets/js/estrellas.js"></script>
