--- a/Temas_optica/Angulo_critico_y_distancia_focal.html
+++ b/Temas_optica/Angulo_critico_y_distancia_focal.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -94,3 +95,4 @@
                     utilizando la siguiente fórmula: α = 2arctan(D/2f), donde α es el ángulo de visión, D es el diámetro de
                     la lente, y f es la distancia focal. Cuanto mayor sea la distancia focal, menor será el ángulo de visión
                     y más "zoom" tendrá el objetivo (Milimoreno, 2012).</p></p>
+                    <script src="/assets/js/estrellas.js"></script>
