--- a/Temas_optica/Dispersion_de_la_luz.html
+++ b/Temas_optica/Dispersion_de_la_luz.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -57,3 +58,4 @@
                 aplicaciones prácticas, como en el diseño de instrumentos ópticos y el estudio de fenómenos ondulatorios.
                 También está muy relacionado con el fenómeno de la interferencia, que se produce cuando dos o más ondas de
                 luz se superponen e interactúan entre sí.</p></p>
+                <script src="/assets/js/estrellas.js"></script>
