--- a/Temas_optica/Dualidad_onda_particula.html
+++ b/Temas_optica/Dualidad_onda_particula.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -46,3 +47,4 @@
                 </div>
             </div>
         </div>
+        <script src="/assets/js/estrellas.js"></script>
