--- a/Temas_optica/Espectro_electromagnetico.html
+++ b/Temas_optica/Espectro_electromagnetico.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -84,7 +85,7 @@
         : con longitud de onda inferior a 10^-2 m y frecuencia superior a 3x10^8.</li>
         <li>Ondas de radio: con una longitud de onda inferior a 1 m y una frecuencia superior a 300x10^6.</li>
         </ul>
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen1.png" alt="imagen 1” >
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen1.png" alt="imagen 1” ">
         <p>(Leskow, 2021)</p>
         <p>Las regiones del espectro electromagnético son los rayos gamma, los rayos X, la radiación ultravioleta, la luz visible, las microondas y las ondas de radio. Los usos del espectro electromagnético son diversos. Por ejemplo:
         <ul>
@@ -97,4 +98,6 @@
         </ul>
         El espectro electromagnético es un rango continuo y prácticamente infinito, pero hasta ahora hemos podido conocer algunas de sus regiones, conocidas como bandas o segmentos. Estas regiones son, de longitudes de onda más cortas a más largas: rayos gamma, rayos X, radiación ultravioleta, luz visible, radiación infrarroja, microondas y ondas de radio. Cada región tiene diferentes propiedades y usos, y se distingue por el comportamiento de sus ondas durante la emisión, transmisión y absorción. El espectro electromagnético es un concepto fundamental en física y tiene numerosas aplicaciones en diversos campos, desde la medicina hasta las telecomunicaciones.</p>
         </div>
+        <script src="/assets/js/estrellas.js"></script>
+
         
