--- a/Temas_optica/Introduccion_a_la_optica.html
+++ b/Temas_optica/Introduccion_a_la_optica.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -66,3 +67,4 @@
             interferencia, polarización y la difracción (Introduccion, n.d.). Por su parte, La óptica moderna, surge de
             la física cuántica y abarca una enorme variedad de campos nuevos de investigación (Introduccion, n.d.).</p>
         <p class="text-break">
+            <script src="/assets/js/estrellas.js"></script>
