--- a/Temas_optica/Laseres.html
+++ b/Temas_optica/Laseres.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -74,3 +75,4 @@
             <p>En comunicaciones, los láseres son fundamentales en la transmisión de datos a través de fibras ópticas. Los
                 láseres de diodo, en particular, son ideales para este propósito debido a su pequeño tamaño, bajo costo y
                 alta eficiencia (Agrawal, 2013).</p></p>
+                <script src="/assets/js/estrellas.js"></script>
