--- a/Temas_optica/Luz_polarizada_y_no_polarizada.html
+++ b/Temas_optica/Luz_polarizada_y_no_polarizada.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -73,3 +74,4 @@
             <li>I0 es la intensidad inicial de la luz,</li>
             <li>θ es el ángulo entre la dirección de polarización y el eje de transmisión del filtro polarizador.</li>
         </ul></p>
+        <script src="/assets/js/estrellas.js"></script>
