--- a/Temas_optica/Reflexion_y_refraccion_de_la_luz.html
+++ b/Temas_optica/Reflexion_y_refraccion_de_la_luz.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -81,3 +82,4 @@
                 de la luz en un medio se define como el cociente entre la velocidad de la luz en el vacío y la velocidad de
                 la luz en el medio: n = c / v donde n es el índice de refracción absoluto de la luz en el medio, c es la
                 velocidad de la luz en el vacío y v es la velocidad de la luz en el medio.</p></p>
+                <script src="/assets/js/estrellas.js"></script>
