--- a/Temas_acustica/Esfuerzo.html
+++ b/Temas_acustica/Esfuerzo.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -83,3 +84,4 @@
                     Sears, F. W., & Zemansky, M. J. (2010). Física para universitarios (12ª ed.). Vol. I: Mecánica.
                     Addison-Wesley.</p>
     </p>
+    <script src="/assets/js/estrellas.js"></script>
