--- a/Temas_acustica/Ley_de_hooke.html
+++ b/Temas_acustica/Ley_de_hooke.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -72,3 +73,4 @@
                     Serway, R. A., Faughn, J. S., & Vuille, C. (2008). College Physics: A Strategic Approach. Cengage Learning.
                 </p>
             </p>
+            <script src="/assets/js/estrellas.js"></script>
