--- a/Temas_acustica/Ley_inverso.html
+++ b/Temas_acustica/Ley_inverso.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -62,3 +63,4 @@
                 <p>Sonido, Ley del Inverso del Cuadrado. (s. f.). HyperPhysics. Recuperado de
                     http://hyperphysics.phy-astr.gsu.edu/hbasees/Acoustic/invsqs.html</p>
             </p>
+            <script src="/assets/js/estrellas.js"></script>
