--- a/Temas_acustica/Movimiento_periodico.html
+++ b/Temas_acustica/Movimiento_periodico.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -78,3 +79,4 @@
                     McIntyre, CR y Woodhouse, J. (2018). La física de los instrumentos de viento. Saltador. </p>
         
         </p>
+        <script src="/assets/js/estrellas.js"></script>
