--- a/Temas_acustica/Ondas.html
+++ b/Temas_acustica/Ondas.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -64,3 +65,4 @@
                 <p>The Physics Classroom. (n.d.). Electromagnetic Waves. Retrieved from
                     https://www.physicsclassroom.com/class/waves/Lesson-4/Electromagnetic-Waves</p>
             </p>
+            <script src="/assets/js/estrellas.js"></script>
