--- a/Temas_acustica/Sonido.html
+++ b/Temas_acustica/Sonido.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -74,3 +75,4 @@
                 frecuencia natural del instrumento o la columna de aire dentro de él.</p>
                 <p>Rossing, T. D., Moore, F. R., & Wheeler, P. A. (2007). The science of sound (3rd ed.). Addison-Wesley.</p>
             </p>
+            <script src="/assets/js/estrellas.js"></script>
