--- a/Temas_acustica/Vibracion.html
+++ b/Temas_acustica/Vibracion.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -70,3 +71,4 @@
                     & Sons.
                     Rossing, T. D. (2007). Springer Handbook of Acoustics. Springer. </p>
             </p>
+            <script src="/assets/js/estrellas.js"></script>
