--- a/Temas_fisica_moderna/Fisica_cuantica.html
+++ b/Temas_fisica_moderna/Fisica_cuantica.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -88,3 +89,4 @@
                     Zapata, F. (2020, agosto 24). Partículas subatómicas. Lifeder.</p>
             
             </p>
+            <script src="/assets/js/estrellas.js"></script>
