--- a/Temas_fisica_moderna/Fisica_de_particulas.html
+++ b/Temas_fisica_moderna/Fisica_de_particulas.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -71,3 +72,4 @@
                 Gudiña, V. (2023, noviembre 29). Física de partículas. Definición.de; Definicion.de.
                 https://definicion.de/fisica-de-particulas/</p>
         </p>
+        <script src="/assets/js/estrellas.js"></script>
