--- a/Temas_fisica_moderna/Particulas_subatomicas.html
+++ b/Temas_fisica_moderna/Particulas_subatomicas.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -83,3 +84,4 @@
                 Definición y principios. Medicoplus.com. https://medicoplus.com/ciencia/modelo estandar-fisica-particulas
             </p>
         </p>
+        <script src="/assets/js/estrellas.js"></script>
