--- a/Temas_fisica_moderna/Teoria_de_la_incertidumbre.html
+++ b/Temas_fisica_moderna/Teoria_de_la_incertidumbre.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -89,3 +90,4 @@
                     explica? pymOrganization. https://psicologiaymente.com/miscelanea/principio incertidumbre-heisenberg</p>
         
             </p>
+            <script src="/assets/js/estrellas.js"></script>
