--- a/Temas_optica/Angulo_de_brewster.html
+++ b/Temas_optica/Angulo_de_brewster.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -66,3 +67,4 @@
                 <li>n1 es el índice de refracción del medio incidente.</li>
                 <li>n2 es el índice de refracción del medio refractado.</li>
             </ul></p>
+            <script src="/assets/js/estrellas.js"></script>
