--- a/Temas_optica/Dispositivos_iniciales_y_luz_de_fibras_opticas.html
+++ b/Temas_optica/Dispositivos_iniciales_y_luz_de_fibras_opticas.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -67,3 +68,4 @@
     
             <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen17.png" alt="Fibras Ópticas">
             <p>(By IA)</p></p>
+            <script src="/assets/js/estrellas.js"></script>
