--- a/Temas_optica/Fenomenos_de_luminiscencia.html
+++ b/Temas_optica/Fenomenos_de_luminiscencia.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -80,3 +81,4 @@
                 de la carne para consumo humano, detección de metales pesados en fuentes de agua potable, marcado de tumores
                 para procedimientos quirúrgicos, imágenes celulares, como componentes de pantallas de teléfonos celulares, y
                 muchos otros (PCC Group, 2023).</p></p>
+                <script src="/assets/js/estrellas.js"></script>
