--- a/Temas_optica/Ondas_electromagneticas.html
+++ b/Temas_optica/Ondas_electromagneticas.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="/assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
-   
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    <div class="estrellas"></div> 
 </head>
 
 <body>
@@ -74,3 +75,4 @@
             <p>donde c es la velocidad de la luz, λ es la longitud de onda y f es la frecuencia. Esta ecuación muestra que,
                 si se conocen la velocidad de la luz y la frecuencia o la longitud de onda, se puede calcular la otra
                 propiedad (Young, HD y Freedman, RA 2012).</p></p>
+                <script src="/assets/js/estrellas.js"></script>
