--- a/Acustica.html
+++ b/Acustica.html
@@ -9,41 +9,8 @@
     <link rel="stylesheet" href="assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="assets/css/Navbar-Right-Links-Dark-icons.css">
-    <style>
-        .card {
-            transition: transform 0.3s ease;
-        }
-
-        .card:hover {
-            transform: scale(1.05);
-        }
-       
-        .estrellas {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            z-index: -1;
-        }
-
-        .estrella {
-            position: absolute;
-            background-color: #ffffff; /* Color blanco para las estrellas */
-            width: 2px;
-            height: 2px;
-            border-radius: 50%;
-            animation: twinkling 3s infinite;
-        }
-
-        @keyframes twinkling {
-            0% { opacity: 1; }
-            50% { opacity: 0.5; }
-            100% { opacity: 1; }
-        }
-
-    </style>
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
+    
 </head>
 
 <body style="background-color: rgb(24, 3, 44);">
