--- a/Conversor.html
+++ b/Conversor.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Acustica</title>
+    <title>Conversor</title>
     
 
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -13,34 +13,7 @@
     <link rel="stylesheet" href="assets/css/Navbar-Right-Links-Dark-icons.css">
 
 
-    <style>
-        .estrellas {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            z-index: -1;
-        }
-
-        .estrella {
-            position: absolute;
-            background-color: #ffffff; /* Color blanco para las estrellas */
-            width: 2px;
-            height: 2px;
-            border-radius: 50%;
-            animation: twinkling 3s infinite;
-        }
-
-        @keyframes twinkling {
-            0% { opacity: 1; }
-            50% { opacity: 0.5; }
-            100% { opacity: 1; }
-        }
-
-        
-    </style>
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
 </head>
 
 <body style="background-color: rgb(24, 3, 44);">
