--- a/Videos_acustica.html
+++ b/Videos_acustica.html
@@ -5,30 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Fisica</title>
-    <style>.estrellas {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
-        z-index: -1;
-    }
-
-    .estrella {
-        position: absolute;
-        background-color: #ffffff; /* Color blanco para las estrellas */
-        width: 2px;
-        height: 2px;
-        border-radius: 50%;
-        animation: twinkling 3s infinite;
-    }
-
-    @keyframes twinkling {
-        0% { opacity: 1; }
-        50% { opacity: 0.5; }
-        100% { opacity: 1; }
-    }</style>
+    
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/css/Articles-Cards-images.css">
@@ -38,6 +15,7 @@
     <link rel="stylesheet" href="assets/css/Dynamically-Queue-Videos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="assets/css/Videos-in-rows-2-and-3-videos-per-row.css">
+    <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
 </head>
 
 <body style="background-color: rgb(24, 3, 44);">
