intento de imagenes y formulas ya bien
formulas dentro de assest,

--- a/Formulas.html
+++ b/Formulas.html
@@ -54,10 +54,10 @@
                 </div>
             </div>
         </div>
-        <div><img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagenf.png" alt="yerpy;b"></div>
-        <div><img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagenf1.png" alt="yerpy;b"></div>
-        <div><img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagenf2.png" alt="yerpy;b"></div>
-        <div><img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagenf3.png" alt="yerpy;b"></div>
+        <div><img src="assets/img/ImagenesFisica/Optica/Imagenf.png" alt="yerpy;b"></div>
+        <div><img src="assets/img/ImagenesFisica/Optica/Imagenf1.png" alt="yerpy;b"></div>
+        <div><img src="assets/img/ImagenesFisica/Optica/Imagenf2.png" alt="yerpy;b"></div>
+        <div><img src="assets/img/ImagenesFisica/Optica/Imagenf3.png" alt="yerpy;b"></div>
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
 </body>
