--- a/Formulas_fisica.html
+++ b/Formulas_fisica.html
@@ -54,8 +54,8 @@
                 </div>
             </div>
         </div>
-        <div><img src="C:\Users\980022886\Downloads\ImagenesFisica\FisicaModerna\Imagenf.png" alt="yerpy;b"></div>
-        <div><img src="C:\Users\980022886\Downloads\ImagenesFisica\FisicaModerna\Imagenf1.png" alt="yerpy;b"></div>
+        <div><img src="assets/img/ImagenesFisica/FisicaModerna/Imagenf.png" alt="yerpy;b"></div>
+        <div><img src="assets/img/ImagenesFisica/FisicaModerna/Imagenf1.png" alt="yerpy;b"></div>
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>
         <script src="assets/js/bootstrap.min.js"></script>
 </body>
