--- a/Temas_optica/Espectro_electromagnetico.html
+++ b/Temas_optica/Espectro_electromagnetico.html
@@ -84,7 +84,7 @@
         : con longitud de onda inferior a 10^-2 m y frecuencia superior a 3x10^8.</li>
         <li>Ondas de radio: con una longitud de onda inferior a 1 m y una frecuencia superior a 300x10^6.</li>
         </ul>
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen1.png" alt="imagen 1">
+        <img src="Temas_optica/Optica_img/Imagen1.png" alt="Ángulo de Brewster">
         <p>(Leskow, 2021)</p>
         <p>Las regiones del espectro electromagnético son los rayos gamma, los rayos X, la radiación ultravioleta, la
             luz visible, las microondas y las ondas de radio. Los usos del espectro electromagnético son diversos. Por
