--- a/Formulas_acustica.html
+++ b/Formulas_acustica.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Fisica</title>
-   
+
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/css/Articles-Cards-images.css">
@@ -16,9 +16,21 @@
 </head>
 
 <body style="background-color: rgb(24, 3, 44);">
-    <div class="estrellas"></div> 
+    <div class="estrellas"></div>
     <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="d-flex justify-content-center align-items-center bs-icon-sm bs-icon-rounded bs-icon-primary me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewbox="0 0 16 16" class="bi bi-bezier"><path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path><path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path></svg></span><span>Brand</span></a><button data-bs-toggle="collapse" data-bs-target="#navcol-5" class="navbar-toggler"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span
+                    class="d-flex justify-content-center align-items-center bs-icon-sm bs-icon-rounded bs-icon-primary me-2 bs-icon"><svg
+                        xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
+                        viewbox="0 0 16 16" class="bi bi-bezier">
+                        <path fill-rule="evenodd"
+                            d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z">
+                        </path>
+                        <path
+                            d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z">
+                        </path>
+                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" data-bs-target="#navcol-5"
+                class="navbar-toggler"><span class="visually-hidden">Toggle navigation</span><span
+                    class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="Optica.html">Optica</a></li>
@@ -32,66 +44,108 @@
         </div>
     </nav>
     <div class="container py-4 py-xl-5">
-        <div style="background-image:url(&quot;assets/img/Fondo_Acustica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
-            <div class="d-flex justify-content-center align-items-center" style="height:inherit;min-height:initial;width:100%;position:absolute;left:0;background-color:rgba(30,41,99,0.53);">
+        <div
+            style="background-image:url(&quot;assets/img/Fondo_Acustica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
+            <div class="d-flex justify-content-center align-items-center"
+                style="height:inherit;min-height:initial;width:100%;position:absolute;left:0;background-color:rgba(30,41,99,0.53);">
                 <div class="d-flex align-items-center order-5" style="height:200px;">
                     <div class="container">
-                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">FORMULAS PARA LA OPTICA</h1>
+                        <h1 class="text-center"
+                            style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">
+                            FORMULAS PARA LA OPTICA</h1>
                     </div>
                 </div>
             </div>
         </div>
+        <div><img src="assets/img/ImagenesFisica/Acustica/Imagenf.png" alt="yerpy;b"></div>
+        <div><img src="assets/img/ImagenesFisica/Acustica/Imagenf1.png" alt="yerpy;b"></div>
         <div class="row clearmargin clearpadding row-image-txt">
-            <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6"><img style="width:100%;" src="assets/img/office-front.jpeg"></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6"><img style="width:100%;"
+                    src="assets/img/office-front.jpeg"></div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-sm-pull-6" style="padding:20px;">
                 <h1>Heading</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel lorem a lectus finibus bibendum ut sagittis diam. Nunc egestas nulla in elit congue, id pellentesque ex semper. Aenean euismod tellus tincidunt massa eleifend, a efficitur lectus ultricies. Aliquam bibendum et leo quis consectetur. Integer consequat consequat mauris, id porttitor sem feugiat eu. Proin ac neque eu nisi viverra mattis. Curabitur molestie lectus ac sollicitudin faucibus. Duis congue ipsum eget justo egestas blandit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel lorem a lectus finibus bibendum ut
+                    sagittis diam. Nunc egestas nulla in elit congue, id pellentesque ex semper. Aenean euismod tellus
+                    tincidunt massa eleifend, a efficitur lectus ultricies. Aliquam bibendum et leo quis consectetur.
+                    Integer consequat consequat mauris, id porttitor sem feugiat eu. Proin ac neque eu nisi viverra
+                    mattis. Curabitur molestie lectus ac sollicitudin faucibus. Duis congue ipsum eget justo egestas
+                    blandit.</p>
                 <div style="text-align:center"><button class="btn btn-light btn-lg" type="button">Lorem </button></div>
             </div>
         </div>
         <div class="row clearmargin clearpadding row-image-txt">
-            <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6"><img style="width:100%;" src="assets/img/office-front.jpeg"></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6"><img style="width:100%;"
+                    src="assets/img/office-front.jpeg"></div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-sm-pull-6" style="padding:20px;">
                 <h1>Heading</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel lorem a lectus finibus bibendum ut sagittis diam. Nunc egestas nulla in elit congue, id pellentesque ex semper. Aenean euismod tellus tincidunt massa eleifend, a efficitur lectus ultricies. Aliquam bibendum et leo quis consectetur. Integer consequat consequat mauris, id porttitor sem feugiat eu. Proin ac neque eu nisi viverra mattis. Curabitur molestie lectus ac sollicitudin faucibus. Duis congue ipsum eget justo egestas blandit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel lorem a lectus finibus bibendum ut
+                    sagittis diam. Nunc egestas nulla in elit congue, id pellentesque ex semper. Aenean euismod tellus
+                    tincidunt massa eleifend, a efficitur lectus ultricies. Aliquam bibendum et leo quis consectetur.
+                    Integer consequat consequat mauris, id porttitor sem feugiat eu. Proin ac neque eu nisi viverra
+                    mattis. Curabitur molestie lectus ac sollicitudin faucibus. Duis congue ipsum eget justo egestas
+                    blandit.</p>
                 <div style="text-align:center"><button class="btn btn-light btn-lg" type="button">Lorem </button></div>
             </div>
         </div>
         <div class="row clearmargin clearpadding row-image-txt">
-            <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6"><img style="width:100%;" src="assets/img/office-front.jpeg"></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6"><img style="width:100%;"
+                    src="assets/img/office-front.jpeg"></div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-sm-pull-6" style="padding:20px;">
                 <h1>Heading</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel lorem a lectus finibus bibendum ut sagittis diam. Nunc egestas nulla in elit congue, id pellentesque ex semper. Aenean euismod tellus tincidunt massa eleifend, a efficitur lectus ultricies. Aliquam bibendum et leo quis consectetur. Integer consequat consequat mauris, id porttitor sem feugiat eu. Proin ac neque eu nisi viverra mattis. Curabitur molestie lectus ac sollicitudin faucibus. Duis congue ipsum eget justo egestas blandit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel lorem a lectus finibus bibendum ut
+                    sagittis diam. Nunc egestas nulla in elit congue, id pellentesque ex semper. Aenean euismod tellus
+                    tincidunt massa eleifend, a efficitur lectus ultricies. Aliquam bibendum et leo quis consectetur.
+                    Integer consequat consequat mauris, id porttitor sem feugiat eu. Proin ac neque eu nisi viverra
+                    mattis. Curabitur molestie lectus ac sollicitudin faucibus. Duis congue ipsum eget justo egestas
+                    blandit.</p>
                 <div style="text-align:center"><button class="btn btn-light btn-lg" type="button">Lorem </button></div>
             </div>
         </div>
         <div class="row clearmargin clearpadding row-image-txt">
-            <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6"><img style="width:100%;" src="assets/img/office-front.jpeg"></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6"><img style="width:100%;"
+                    src="assets/img/office-front.jpeg"></div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-sm-pull-6" style="padding:20px;">
                 <h1>Heading</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel lorem a lectus finibus bibendum ut sagittis diam. Nunc egestas nulla in elit congue, id pellentesque ex semper. Aenean euismod tellus tincidunt massa eleifend, a efficitur lectus ultricies. Aliquam bibendum et leo quis consectetur. Integer consequat consequat mauris, id porttitor sem feugiat eu. Proin ac neque eu nisi viverra mattis. Curabitur molestie lectus ac sollicitudin faucibus. Duis congue ipsum eget justo egestas blandit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel lorem a lectus finibus bibendum ut
+                    sagittis diam. Nunc egestas nulla in elit congue, id pellentesque ex semper. Aenean euismod tellus
+                    tincidunt massa eleifend, a efficitur lectus ultricies. Aliquam bibendum et leo quis consectetur.
+                    Integer consequat consequat mauris, id porttitor sem feugiat eu. Proin ac neque eu nisi viverra
+                    mattis. Curabitur molestie lectus ac sollicitudin faucibus. Duis congue ipsum eget justo egestas
+                    blandit.</p>
                 <div style="text-align:center"><button class="btn btn-light btn-lg" type="button">Lorem </button></div>
             </div>
         </div>
         <div class="row clearmargin clearpadding row-image-txt">
-            <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6"><img style="width:100%;" src="assets/img/office-front.jpeg"></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6"><img style="width:100%;"
+                    src="assets/img/office-front.jpeg"></div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-sm-pull-6" style="padding:20px;">
                 <h1>Heading</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel lorem a lectus finibus bibendum ut sagittis diam. Nunc egestas nulla in elit congue, id pellentesque ex semper. Aenean euismod tellus tincidunt massa eleifend, a efficitur lectus ultricies. Aliquam bibendum et leo quis consectetur. Integer consequat consequat mauris, id porttitor sem feugiat eu. Proin ac neque eu nisi viverra mattis. Curabitur molestie lectus ac sollicitudin faucibus. Duis congue ipsum eget justo egestas blandit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel lorem a lectus finibus bibendum ut
+                    sagittis diam. Nunc egestas nulla in elit congue, id pellentesque ex semper. Aenean euismod tellus
+                    tincidunt massa eleifend, a efficitur lectus ultricies. Aliquam bibendum et leo quis consectetur.
+                    Integer consequat consequat mauris, id porttitor sem feugiat eu. Proin ac neque eu nisi viverra
+                    mattis. Curabitur molestie lectus ac sollicitudin faucibus. Duis congue ipsum eget justo egestas
+                    blandit.</p>
                 <div style="text-align:center"><button class="btn btn-light btn-lg" type="button">Lorem </button></div>
             </div>
         </div>
         <div class="row clearmargin clearpadding row-image-txt">
-            <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6"><img style="width:100%;" src="assets/img/office-front.jpeg"></div>
+            <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6"><img style="width:100%;"
+                    src="assets/img/office-front.jpeg"></div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-sm-pull-6" style="padding:20px;">
                 <h1>Heading</h1>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel lorem a lectus finibus bibendum ut sagittis diam. Nunc egestas nulla in elit congue, id pellentesque ex semper. Aenean euismod tellus tincidunt massa eleifend, a efficitur lectus ultricies. Aliquam bibendum et leo quis consectetur. Integer consequat consequat mauris, id porttitor sem feugiat eu. Proin ac neque eu nisi viverra mattis. Curabitur molestie lectus ac sollicitudin faucibus. Duis congue ipsum eget justo egestas blandit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel lorem a lectus finibus bibendum ut
+                    sagittis diam. Nunc egestas nulla in elit congue, id pellentesque ex semper. Aenean euismod tellus
+                    tincidunt massa eleifend, a efficitur lectus ultricies. Aliquam bibendum et leo quis consectetur.
+                    Integer consequat consequat mauris, id porttitor sem feugiat eu. Proin ac neque eu nisi viverra
+                    mattis. Curabitur molestie lectus ac sollicitudin faucibus. Duis congue ipsum eget justo egestas
+                    blandit.</p>
                 <div style="text-align:center"><button class="btn btn-light btn-lg" type="button">Lorem </button></div>
             </div>
         </div>
@@ -115,7 +169,7 @@
             estrella.style.animationDuration = `${duracion}s`;
             estrellasContainer.appendChild(estrella);
         }
-</script>
+    </script>
 </body>
 
 </html>
