--- a/Temas_optica/Fenomenos_de_luminiscencia.html
+++ b/Temas_optica/Fenomenos_de_luminiscencia.html
@@ -42,7 +42,6 @@
             </div>
         </div>
         <p class="text-break"><h2>Fenómenos de Luminiscencia</h2>
-
             <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen18.png" alt="Fenómenos de Luminiscencia">
             <p>(PCC Group, 2023)</p>
     
@@ -73,12 +72,14 @@
                     se utiliza en pantallas para mejorar la calidad de las imágenes, como las que se utilizan en imágenes
                     médicas (PCC Group, 2023).</li>
             </ol>
-    
-            <p>La luminiscencia se utiliza en diversas aplicaciones, incluida la terapia contra el cáncer (terapia
+        <p>La luminiscencia se utiliza en diversas aplicaciones, incluida la terapia contra el cáncer (terapia
                 fotodinámica), la cuantificación de la calidad de la leche, la detección de sustancias ilícitas,
                 aplicaciones forenses (por ejemplo, la detección de rastros de sangre), el desarrollo de nuevos tintes
                 láser, sensores de gas neurológico, sensores de armas químicas, sensores para evaluar la calidad y frescura
                 de la carne para consumo humano, detección de metales pesados en fuentes de agua potable, marcado de tumores
                 para procedimientos quirúrgicos, imágenes celulares, como componentes de pantallas de teléfonos celulares, y
-                muchos otros (PCC Group, 2023).</p></p>
+                muchos otros (PCC Group, 2023).</p>
+            </p>
+            <p>PCC Group. (2023, March 29). Luminiscencia. PCC Group Product Portal.
+                https://www.products.pcc.eu/es/academy/luminiscencia/</p>
                 <script src="/assets/js/estrellas.js"></script>
