--- a/Temas_optica/Ondas_electromagneticas.html
+++ b/Temas_optica/Ondas_electromagneticas.html
@@ -10,21 +10,31 @@
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
     <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
-    <div class="estrellas"></div> 
+    <div class="estrellas"></div>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
-                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path>
-                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
-                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span
+                    class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg
+                        xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
+                        viewBox="0 0 16 16" class="bi bi-bezier">
+                        <path fill-rule="evenodd"
+                            d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z">
+                        </path>
+                        <path
+                            d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z">
+                        </path>
+                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler"
+                data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span
+                    class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="\Optica.html">Optica</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Acustica.html">Acustica</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Fisica_moderna.html">Fisica Moderna</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link active" href="\Sobre_nosotros.html">Sobre nosotros</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Calculadora.html">Calculadora</a></li>
                 </ul>
@@ -32,47 +42,59 @@
         </div>
     </nav>
     <div class="container py-4 py-xl-5">
-        <div style="background-image:url(&quot;/assets/img/Fondo_Optica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
-            <div class="d-flex justify-content-center align-items-center" style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
+        <div
+            style="background-image:url(&quot;/assets/img/Fondo_Optica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
+            <div class="d-flex justify-content-center align-items-center"
+                style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
                 <div class="d-flex align-items-center order-5" style="height:200px;">
                     <div class="container">
-                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">ONDAS ELECTROMAGNETICAS</h1>
+                        <h1 class="text-center"
+                            style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">
+                            ONDAS ELECTROMAGNETICAS</h1>
                     </div>
                 </div>
             </div>
         </div>
-        <p class="text-break"><h2>Ondas electromagnéticas</h2>
-            <p>Estas ondas son perturbaciones en los campos eléctricos y magnéticos que se propagan por el espacio. Resultan
-                del movimiento de cargas eléctricas y pueden viajar a través del vacío o de un medio material. Las ondas
-                electromagnéticas transportan energía y momento, que pueden transferirse a la materia cuando interactúan con
-                ella. Una característica clave de las ondas electromagnéticas es la relación entre el campo eléctrico (E) y
-                el campo magnético (B). Estos campos son siempre perpendiculares entre sí y a la dirección de propagación de
-                la onda. A medida que el campo eléctrico oscila, genera un campo magnético variable en el tiempo y
-                viceversa. Esta naturaleza autosostenible permite que las ondas electromagnéticas se propaguen a largas
-                distancias. Las ondas electromagnéticas pueden propagarse a través de diversos medios, incluidos el vacío,
-                gases, líquidos y sólidos. Las características de propagación dependen de las propiedades del medio, como su
-                permitividad y permeabilidad, así como de la frecuencia de la onda. Algunos medios pueden absorber o
-                reflejar ondas electromagnéticas, mientras que otros pueden dejarlas pasar con poca atenuación.</p>
-            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen10.png" alt="Onda electromagnética">
-            <p>(Tomé, 2017)</p>
-        </div>
-    
-        <div class="contenido">
-            <h2>La velocidad de una onda electromagnética</h2>
-            <p>La velocidad de una onda electromagnética es la velocidad a la que se propaga a través de un medio o vacío.
-                En el vacío, la velocidad de la luz (c) es de aproximadamente 299.792 kilómetros por segundo o 186.282
-                millas por segundo. Esta velocidad permanece constante para todas las ondas electromagnéticas,
-                independientemente de su longitud de onda o frecuencia.</p>
-            <p>La longitud de onda (λ) es la distancia entre dos puntos consecutivos en la misma fase de la onda, como la
-                distancia entre dos crestas o valles. Generalmente se mide en metros, pero también se utilizan otras
-                unidades como nanómetros (nm) (Young, HD y Freedman, RA 2012).</p>
-            <p>La frecuencia (f) es el número de ciclos completos u oscilaciones de una onda que ocurren por unidad de
-                tiempo. Normalmente se mide en hercios (Hz), que representa un ciclo por segundo. La frecuencia de una onda
-                electromagnética es inversamente proporcional a su longitud de onda, lo que significa que las ondas de mayor
-                frecuencia tienen longitudes de onda más cortas y las de menor frecuencia tienen longitudes de onda más
-                largas. Esta relación se puede expresar como:</p>
-            <p>c = λ * f</p>
-            <p>donde c es la velocidad de la luz, λ es la longitud de onda y f es la frecuencia. Esta ecuación muestra que,
-                si se conocen la velocidad de la luz y la frecuencia o la longitud de onda, se puede calcular la otra
-                propiedad (Young, HD y Freedman, RA 2012).</p></p>
-                <script src="/assets/js/estrellas.js"></script>
+        <p class="text-break">
+        <h2>Ondas electromagnéticas</h2>
+        <p>Estas ondas son perturbaciones en los campos eléctricos y magnéticos que se propagan por el espacio. Resultan
+            del movimiento de cargas eléctricas y pueden viajar a través del vacío o de un medio material. Las ondas
+            electromagnéticas transportan energía y momento, que pueden transferirse a la materia cuando interactúan con
+            ella. Una característica clave de las ondas electromagnéticas es la relación entre el campo eléctrico (E) y
+            el campo magnético (B). Estos campos son siempre perpendiculares entre sí y a la dirección de propagación de
+            la onda. A medida que el campo eléctrico oscila, genera un campo magnético variable en el tiempo y
+            viceversa. Esta naturaleza autosostenible permite que las ondas electromagnéticas se propaguen a largas
+            distancias. Las ondas electromagnéticas pueden propagarse a través de diversos medios, incluidos el vacío,
+            gases, líquidos y sólidos. Las características de propagación dependen de las propiedades del medio, como su
+            permitividad y permeabilidad, así como de la frecuencia de la onda. Algunos medios pueden absorber o
+            reflejar ondas electromagnéticas, mientras que otros pueden dejarlas pasar con poca atenuación.</p>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen10.png" alt="Onda electromagnética">
+        <p>(Tomé, 2017)</p>
+    </div>
+
+    <div class="contenido">
+        <h2>La velocidad de una onda electromagnética</h2>
+        <p>La velocidad de una onda electromagnética es la velocidad a la que se propaga a través de un medio o vacío.
+            En el vacío, la velocidad de la luz (c) es de aproximadamente 299.792 kilómetros por segundo o 186.282
+            millas por segundo. Esta velocidad permanece constante para todas las ondas electromagnéticas,
+            independientemente de su longitud de onda o frecuencia.</p>
+        <p>La longitud de onda (λ) es la distancia entre dos puntos consecutivos en la misma fase de la onda, como la
+            distancia entre dos crestas o valles. Generalmente se mide en metros, pero también se utilizan otras
+            unidades como nanómetros (nm) (Young, HD y Freedman, RA 2012).</p>
+        <p>La frecuencia (f) es el número de ciclos completos u oscilaciones de una onda que ocurren por unidad de
+            tiempo. Normalmente se mide en hercios (Hz), que representa un ciclo por segundo. La frecuencia de una onda
+            electromagnética es inversamente proporcional a su longitud de onda, lo que significa que las ondas de mayor
+            frecuencia tienen longitudes de onda más cortas y las de menor frecuencia tienen longitudes de onda más
+            largas. Esta relación se puede expresar como:</p>
+        <p>c = λ * f</p>
+        <p>donde c es la velocidad de la luz, λ es la longitud de onda y f es la frecuencia. Esta ecuación muestra que,
+            si se conocen la velocidad de la luz y la frecuencia o la longitud de onda, se puede calcular la otra
+            propiedad (Young, HD y Freedman, RA 2012).</p>
+        </p>
+        <p>Matan. (2024, January 16). Conceptos básicos de las ondas electromagnéticas. Electricity - Magnetism.
+            https://www.electricity-magnetism.org/es/conceptos-basicos-de-las-ondas-electromagneticas/
+            Young, HD y Freedman, RA (2012). Física Universitaria con Física Moderna (13ª ed.). Educación Pearson.
+            Tomé, C. (2017, May 2). La velocidad de las ondas electromagnéticas y la naturaleza de la luz. Cuaderno De
+            Cultura Científica.
+            https://culturacientifica.com/2016/07/26/la-velocidad-las-ondas-electromagneticas-la-naturaleza-la-luz/</p>
+        <script src="/assets/js/estrellas.js"></script>
