--- a/Temas_optica/Introduccion_a_la_optica.html
+++ b/Temas_optica/Introduccion_a_la_optica.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
     <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
-    <div class="estrellas"></div> 
+    <div class="estrellas"></div>
 </head>
 
 <body>
@@ -66,5 +66,10 @@
             leyes de la refracción y la reflexión, mientras que la óptica física se encarga de los fenómenos
             interferencia, polarización y la difracción (Introduccion, n.d.). Por su parte, La óptica moderna, surge de
             la física cuántica y abarca una enorme variedad de campos nuevos de investigación (Introduccion, n.d.).</p>
+        <p>Introduccion. (n.d.). https://webs.um.es/jmz/DiseGrafSimula/alumnos_08_09/morales/Introduccion.html
+            Admin. (2023, October 22). Introducción A La óptica: El Estudio De La Luz. MI ESCUELITA DIGITAL.
+            https://miescuelitadigital.com/introduccion-a-la-optica-el-estudio-de-la-luz/
+            El Profe Ochoa. (2020, May 10). Introducción a la óptica [Video]. YouTube.
+            https://www.youtube.com/watch?v=chNNaBLX-Hw</p>
         <p class="text-break">
             <script src="/assets/js/estrellas.js"></script>
