--- a/Temas_optica/Lentes_delgados.html
+++ b/Temas_optica/Lentes_delgados.html
@@ -10,21 +10,31 @@
     <link rel="stylesheet" href="/assets/css/Customizable-Background--Overlay.css">
     <link rel="stylesheet" href="/assets/css/Navbar-Right-Links-Dark-icons.css">
     <link rel="stylesheet" href="/assets/css/css/ESTERLLAS.CSS">
-    <div class="estrellas"></div> 
+    <div class="estrellas"></div>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-bezier">
-                        <path fill-rule="evenodd" d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"></path>
-                        <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
-                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span
+                    class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><svg
+                        xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
+                        viewBox="0 0 16 16" class="bi bi-bezier">
+                        <path fill-rule="evenodd"
+                            d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z">
+                        </path>
+                        <path
+                            d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z">
+                        </path>
+                    </svg></span><span>Brand</span></a><button data-bs-toggle="collapse" class="navbar-toggler"
+                data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span
+                    class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="\Optica.html">Optica</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Acustica.html">Acustica</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Fisica_moderna.html">Fisica Moderna</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="\Conversor.html">Conversor de Unidades</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link active" href="\Sobre_nosotros.html">Sobre nosotros</a></li>
                     <li class="nav-item"><a class="nav-link active" href="\Calculadora.html">Calculadora</a></li>
                 </ul>
@@ -32,14 +42,80 @@
         </div>
     </nav>
     <div class="container py-4 py-xl-5">
-        <div style="background-image:url(&quot;/assets/img/Fondo_Optica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
-            <div class="d-flex justify-content-center align-items-center" style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
+        <div
+            style="background-image:url(&quot;/assets/img/Fondo_Optica.jpg&quot;);height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
+            <div class="d-flex justify-content-center align-items-center"
+                style="height: inherit;min-height: initial;width: 100%;position: absolute;left: 0;background-color: rgba(30,41,99,0.53);">
                 <div class="d-flex align-items-center order-5" style="height:200px;">
                     <div class="container">
-                        <h1 class="text-center" style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">LENTES DELGADOS</h1>
+                        <h1 class="text-center"
+                            style="color:rgb(242,245,248);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">
+                            LENTES DELGADOS</h1>
                     </div>
                 </div>
             </div>
         </div>
-        <p class="text-break">mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</p>
+        <h2>Lentes delgadas</h2>
+        <p>Las lentes son los sistemas ópticos más utilizados en la actualidad y se encuentran en gafas, cámaras,
+            binoculares y mucho más. Se estudian bajo la luz de la óptica geométrica, lo que implica comprender su
+            definición, tipos, ecuaciones fundamentales, puntos focales, aumentos laterales, potencia y dioptrías.
+        </p>
+        <h3>Definición:</h3>
+        <p>Una lente es un sistema óptico formado por un medio transparente que está unido por dos superficies
+            refractantes o dioptrías, al menos una de las cuales es curva. (Fernández, n.d.).</p>
+        <h3>Etimología:</h3>
+        <p>El término "lente" proviene de la palabra latina lens, lentis, que significa "lenteja". Debido a su
+            semejanza con la forma de una lenteja. (Fernández, n.d.).</p>
+        <h3>Tipos</h3>
+        <h4>Grosor:</h4>
+        <p>Lentes delgadas y lentes gruesas, según tengan un espesor pequeño o grande en comparación con los radios
+            de curvatura de las superficies refractarias y con las distancias s y s'. En esta sección nos
+            centraremos en lentes delgadas. (Fernández, n.d.).</p>
+        <h4>Comportamiento:</h4>
+        <p>Lentes convergentes (también llamadas convexas o positivas) y lentes divergentes (también llamadas
+            cóncavas o negativas). Los primeros convergen ("unen") los rayos que discurren paralelos al haz óptico
+            en un punto llamado foco de la imagen, a la derecha de la lente. Los lunes, los rayos divergen ("se
+            separan") al pasar a través de la lente, por lo que el foco de la imagen se sitúa en el borde de la
+            lente, donde convergen las prolongaciones de los rayos.</p>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen7.png"
+            alt="Imagen de la fórmula de las lentes delgadas">
+        <p>(Fernández, n.d.)</p>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen8.png"
+            alt="Imagen de la fórmula de las lentes delgadas">
+        <p>(Fernández, n.d.)</p>
+        <h3>Fórmula de las lentes delgadas</h3>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen3.png"
+            alt="Imagen de la fórmula de las lentes delgadas">
+        <p>(Física - No me salen, 2021)</p>
+        <p>Donde:<br>
+            f es la distancia focal de la lente,<br>
+            n1 y n2 son los índices de refracción del medio antes y después de la lente, respectivamente,<br>
+            R1 y R2 son los radios de curvatura de las dos superficies de la lente,<br>
+            d es el espesor de la lente.<br>
+            Esta fórmula permite calcular la distancia focal de una lente delgada, dados sus índices de refracción y
+            radios de curvatura. (Fernández, n.d.)</p>
+        <h3>Ecuación Fundamental de las Lentes Delgadas</h3>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen4.png"
+            alt="Imagen de la ecuación fundamental de las lentes delgadas">
+        <p>(Fernández, n.d.)</p>
+        <p>Donde n′ y n son los índices de refracción de la lente y del medio respectivamente, s y s′ son las
+            distancias del objeto y la imagen al origen O (situado en el centro de la lente), y R1 y R2 son los
+            radios de curvatura de las superficies refractantes de la lente.</p>
+        <h3>Distancias Focales y Potencia de la Lente</h3>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen5.png"
+            alt="Imagen de las distancias focales y potencia de la lente">
+        <p>(Fernández, n.d.)</p>
+        <p>La distancia focal (f) y la distancia focal imagen (f′) son medidas importantes en el estudio de las
+            lentes delgadas, relacionadas con el foco objeto y el foco imagen respectivamente. La potencia de una
+            lente (P) está definida en función de la distancia focal imagen (f′). (Fernández, n.d.)</p>
+        <h3>Aumento Lateral</h3>
+        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen6.png" alt="Imagen del aumento lateral">
+        <p>(Fernández, n.d.)</p>
+        <p>El aumento lateral (AL) es una medida de la ampliación o reducción de una imagen en comparación con el
+            objeto original. Se define como la relación entre la altura de la imagen (y′) y la altura del objeto
+            (y). (Fernández, n.d.)</p>
+        <p>Moebs, W., Ling, S. J., & Sanny, J. (2021, November 17). 2.4 Lentes delgadas - Física universitaria
+            volumen 3 | OpenStax.
+            https://openstax.org/books/f%C3%ADsica-universitaria-volumen-3/pages/2-4-lentes-delgadas</p>
+        <p class="text-break"></p>
         <script src="/assets/js/estrellas.js"></script>
